# GSoC.FLINT.Refactoring_Core_Code

./: .gitignore  README.md
moja-benchmark/: CMakeLists.txt  README.md
moja-benchmark/fastformat-0.7.1/: fastformat-0.7.1-doc.chm
moja-benchmark/fastformat-0.7.1/src/: ximpl_core.hpp
moja-benchmark/fmt-7.0.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  FMT.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  fmt-config-version.cmake  fmt-targets.cmake  fmt.pc  fmt.vcxproj  fmt.vcxproj.filters
moja-benchmark/fmt-7.0.1/Debug/: fmtd.lib
moja-benchmark/fmt-7.0.1/doc/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
moja-benchmark/fmt-7.0.1/test/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  assert-test.vcxproj  assert-test.vcxproj.filters  chrono-test.vcxproj  chrono-test.vcxproj.filters  cmake_install.cmake  color-test.vcxproj  color-test.vcxproj.filters  compile-test.vcxproj  compile-test.vcxproj.filters  core-test.vcxproj  core-test.vcxproj.filters  custom-formatter-test.vcxproj  custom-formatter-test.vcxproj.filters  format-impl-test.vcxproj  format-impl-test.vcxproj.filters  format-test.vcxproj  format-test.vcxproj.filters  gmock.vcxproj  gmock.vcxproj.filters  grisu-test.vcxproj  grisu-test.vcxproj.filters  (+20 more)
moja-benchmark/src/: format.cpp  tinyformat_speed_test.cpp  variant.cpp
(+525 files in other folders)
